fix: instruments gap too big

--- a/src/styles/blocks/_instruments.scss
+++ b/src/styles/blocks/_instruments.scss
@@ -71,7 +71,7 @@
     &__grid {
         display: grid; 
         grid-template-columns: repeat(auto-fit,minmax(384px,1fr));
-        gap: 50px 142px;
+        gap: 50px 100px;
         width: 100%;
         margin-bottom: 153px;
     }
